MongoDB/Platform/prod/platform-prod-mongodb-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-mkt-prod-platform
  labels: 
    app: mongodb-express-mkt-prod-platform
    app.kubernetes.io/instance: mongodb-mkt-prod-platform
  namespace: mongodb-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-express-mkt-prod-platform
      app.kubernetes.io/instance: mongodb-mkt-prod-platform
  template:
    metadata:
      labels:
        app: mongodb-express-mkt-prod-platform
        app.kubernetes.io/instance: mongodb-mkt-prod-platform
    spec:
      tolerations:
        - key: dedicated
          operator: Equal
          value: mongodb
          effect: NoSchedule
      containers:
      - image: docker.io/library/mongo-express:1.0.2
        imagePullPolicy: Always
        name: mongo-express
        ports:
          - containerPort: 8081
            name: mongo-express
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 600
         periodSeconds: 10
        readinessProbe:
         tcpSocket:
           port: 8081
         initialDelaySeconds: 30
         periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-mkt-prod-platform-svc
spec:
  selector:
    app: mongodb-express-mkt-prod-platform
    app.kubernetes.io/instance: mongodb-mkt-prod-platform
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
